--- a/data_taking_objects/templates/data_taking_objects/runs.html
+++ b/data_taking_objects/templates/data_taking_objects/runs.html
@@ -5,7 +5,7 @@
 
 
 {% block maincontent %}
-<h2>Jump quickly</h2>
+<h2>Jump quickly...</h2>
 <form action="" method="GET" class="row">
     <div class="col-6 col-lg-2">
         {{ form.runnr.errors }}
@@ -30,6 +30,7 @@
     </div>
 </form>
 
+<h2 style="margin-top:10px">...or browse through runs</h2>
       <div>
         {% if error_message %}
           <div class="alert alert-warning d-flex align-items-center alert-dismissible fade show" role="alert">
